--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
 
 {% block page_content %}
+<!-- Write your stuff only here buddy! but hey you are doing a  great job! -->
+
 <h1>Index</h1>
+
+
+
+
+
+
 {% endblock %}
