you watched me write it

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <title></title>
-        
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/stylesheet.css') }} ">
     </head>
     <body>
         <header>
@@ -20,5 +20,6 @@
         <footer>
 
         </footer>
+        <script type="text/javascript" href"{{ url_for('static', filename='scripts/app.js') }}"> </script>
     </body>
 </html>
