added map FUNction

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,9 +3,8 @@
 {% block page_content %}
 <!-- Write your stuff only here buddy! but hey you are doing a  great job! -->
 
-<h1>Index</h1>
-
-
+<div id="canvas">
+</div>
 
 
 
