--- a/app/static/styles/stylesheet.css
+++ b/app/static/styles/stylesheet.css
@@ -1,4 +1,17 @@
-.canvas {
+body {
+  width: 100%;
+  height: 100%;
+
+}
+
+
+#canvas * {
     width: 160px;
     height: 160px;
+    border: 1px solid black;
+    display: inline-block;
+  }
+
+  #canvas{
+  max-width: 700px;
   }
