--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,6 @@
         <footer>
 
         </footer>
-        <script type="text/javascript" href"{{ url_for('static', filename='scripts/app.js') }}"> </script>
+        <script type="text/javascript" src="{{ url_for('static', filename='scripts/app.js') }}"> </script>
     </body>
 </html>
